[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsil"
version = "0.2.0"
description = "Landmark-Based Evaluation Metrics for Scalable Mixed-Type Clustering"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Hasta Pratama", email = "hasta.pratama@gmail.com"},
    {name = "Fetty Fitriyanti Lubis", email = "fettyfitriyanti@itb.ac.id"},
    {name = "Jaka Sembiring", email = "jaka@itb.ac.id"},
]
keywords = [
    "clustering",
    "evaluation",
    "mixed-type data",
    "silhouette",
    "landmark",
    "unsupervised learning",
    "gower distance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pandas>=1.3", "scikit-learn>=1.0"]

[project.urls]
Homepage = "https://github.com/hqers/l-sil"
Repository = "https://github.com/hqers/l-sil"
Documentation = "https://github.com/hqers/l-sil#readme"
Issues = "https://github.com/hqers/l-sil/issues"

[tool.setuptools.packages.find]
include = ["lsil*"]
